--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
 <head>
   <base href="/">
-  <meta charset="UTF-8">
-  <title>Frontend-VueJS-Coding-Challenge</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Shopping Cart Challenge</title>
+  <meta name="description" content="Shopping Cart Javascript Developer Challenge">
+
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Shopping Cart Challenge">
+  <meta itemprop="description" content="Shopping Cart Javascript Developer Challenge">
+
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Shopping Cart Challenge">
+  <meta name="og:description" content="Shopping Cart Javascript Developer Challenge">
+  <meta name="og:site_name" content="Shopping Cart Challenge">
+  <meta name="og:locale" content="en_Us">
+  <meta name="og:type" content="website">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="app"></div>
